crates/cosmon-cli/tests/snapshots/help__topology_outline.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
Symbol outline of a single Rust file

Usage: cs topology outline [OPTIONS] <FILE>

Arguments:
  <FILE>  Path to the `.rs` file

Options:
      --config <PATH>  Path to the state directory (default: the galaxy's .cosmon/state/)
  -v, --verbose        Enable verbose output
      --json           Output in JSON format
  -h, --help           Print help
