crates/cosmon-cli/tests/snapshots/help__topology_symbols.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
Search symbols by name across a Rust project

Usage: cs topology symbols [OPTIONS] <PATH> <QUERY>

Arguments:
  <PATH>   Path to the project root
  <QUERY>  Search query (case-insensitive substring match)

Options:
      --config <PATH>  Path to the state directory (default: the galaxy's .cosmon/state/)
  -v, --verbose        Enable verbose output
      --json           Output in JSON format
  -h, --help           Print help
