crates/cosmon-cli/tests/snapshots/help__validate.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
Validate — deliberate heavyweight project-milestone gate

Usage: cs validate [OPTIONS]

Options:
      --config <PATH>  Path to the state directory (default: the galaxy's .cosmon/state/)
  -v, --verbose        Enable verbose output
      --json           Output in JSON format
  -h, --help           Print help
